--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 					<div id="fh5co-logo">
 						<h1>
 							<a href="index.html">
-							Coding<span>.</span>
-							<small>My life</small>
+							Dang<span>.</span>
+							<small>Dong</small>
 							</a>
 						</h1>
 					</div>
