--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 							</div>
 							<div class="col-sm-5">
 								<ul class="fh5co-social-icons">
-									<li><a target="_blank" href="https://twitter.com/donghaidang179"><i class="icon-twitter-with-circle"></i></a></li>
-									<li><a target="_blank" href="https://www.facebook.com/dang.donghai1603/"><i class="icon-facebook-with-circle"></i></a></li>
-									<li><a target="_blank" href="https://www.linkedin.com/in/dang-dong-8738641a6/"><i class="icon-linkedin-with-circle"></i></a></li>
+									<li><a target="_blank" href="https://www.instagram.com/dangdong163/"><i class="icon-instagram-with-circle"></i></a></li>
+									<li><a target="_blank" href="https://www.facebook.com/dangdh16/"><i class="icon-facebook-with-circle"></i></a></li>
+									<li><a target="_blank" href="https://www.linkedin.com/in/dang-dong-hai-8738641a6/"><i class="icon-linkedin-with-circle"></i></a></li>
 									<li><a target="_blank" href="https://github.com/DHaiDang"><i class="icon-github-with-circle"></i></a></li>
 								</ul>
 							</div>
@@ -118,7 +118,7 @@
 						   			<div class="col-md-10 col-md-offset-1 slider-text">
 						   				<div class="slider-text-inner">
 						   					<h1>Ninh Bình</h1>
-												<h2>Chuyến đi bên cạnh những người bạn, đồng nghiệp. Intern Cloudrity 2021</h2>
+												<h2>Chuyến đi bên cạnh những người bạn, đồng nghiệp. Cloudrity 2021</h2>
 												<p class="ct"><a href="#">Learn More <i class="icon-arrow-right"></i></a></p>
 						   				</div>
 						   			</div>
@@ -139,7 +139,7 @@
 					<a href="#" class="featured text-center animate-box" style="background-image: url(images/taxua.jpg);">
 						<div class="desc">
 							<span class="date">Oct 11, 2020</span>
-							<h3>Tà Xùa-Thiên đường mây</h3>
+							<h3>Tà Xùa - Bắc Yên</h3>
 							<span class="category">Tralver</span>
 						</div>
 					</a>
@@ -160,7 +160,7 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#"><img class="img-responsive" src="images/catba.jpg" alt=""></a>
 						<div class="blog-text">
-							<h3><a href="#">Quần Đảo Cát Bà - Hải Phòng</a></h3>
+							<h3><a href="#">Cát Bà - Hải Phòng</a></h3>
 						</div> 
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#"><img class="img-responsive" src="images/longbien.jpg" alt=""></a>
 						<div class="blog-text">
-							<h3><a href="#">Cầu Long Biên- Hà Nội</a></h3>
+							<h3><a href="#">Cầu Long Biên - Hà Nội</a></h3>
 						</div> 
 					</div>
 				</div>
@@ -207,13 +207,13 @@
 								<a href="post.html"><img class="img-responsive" src="images/lan_dau_len_hanoi.JPG	" alt=""></a>
 								<div class="blog-text text-center">
 									<p>Lần đầu xách balo lên Hà Nội, không suôn sẻ như mọi người, là có điểm đại học, có giấy báo là được bố mẹ
-										người thân ủng hộ đưa đón lên Hà Nội nhập học, mình bị kìm lại từ những người thân không muốn cho mình 
+										người thân ủng hộ đưa đón lên Hà Nội nhập học, mình bị bắt ở lại từ gia đình không muốn cho mình 
 										học trên Hà Nội, bằng cách nào đó để huỷ đi kết qủa của mình, thật biết ơn tờ giấy 500k lúc đó, giúp mình
 										lần đầu tiên tự khám phá thế giới bên ngoài vùng đât Hải Phòng.
 									</p>
 									<ul class="fh5co-social-icons">
 										<li>Share:</li>
-										<li><a href="#"><i class="icon-twitter-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-instagram-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
@@ -238,7 +238,7 @@
 									</p>
 									<ul class="fh5co-social-icons">
 										<li>Share:</li>
-										<li><a href="#"><i class="icon-twitter-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-instagram-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
@@ -249,7 +249,55 @@
 						<div class="col-md-6">
 							<div class="fh5co-blog animate-box">
 								<div class="title text-center">
-									<span class="posted-on">Jun. 1th 2021</span>
+									<span class="posted-on">Feb. 8th 2021</span>
+									<h3><a href="#">Terraform reusable</a></h3>
+									<span class="category">DevOps</span>
+								</div>
+								<a href="#"><img class="img-responsive" src="images/terraform.png" alt=""></a>
+								<div class="blog-text text-center">
+									<p>
+										Terrafrom là công cụ mạnh mẽ về infrastructure as code. Có thể dùng cho multiple cloud provider. Trong 1 hệ thống lớn như các nhà mạng, bank hay các hệ thống microservices
+										số lượng thành phần hạ tầng lên đến hàng triệu. Do đó ko thể dùng sức người để manage được. Từ đó ta sẽ dùng terraform sao cho chuẩn chỉ để dễ dàng sử dụng lại. Cũng như thuộc tính DRY vậy.
+										Đọc thêm ở đây nhé: https://dangdh.notion.so/terraform
+									</p>
+									<ul class="fh5co-social-icons">
+										<li>Share:</li>
+										<li><a href="#"><i class="icon-instagram-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
+									</ul>
+								</div> 
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="fh5co-blog animate-box">
+								<div class="title text-center">
+									<span class="posted-on">Apr. 3th 2021</span>
+									<h3><a href="#">Volumebase attack DDos</a></h3>
+									<span class="category">Networking</span>
+								</div>
+								<a href="#"><img class="img-responsive" src="images/ddos.png" alt=""></a>
+								<div class="blog-text text-center">
+									<p>
+										Tấn công ddos là vấn đề nhức nhối của tất cả website hiện nay. Xong mn nên hiểu có 2 loại tấn công ddos phổ biến là ddos l7 và ddos l4. L7 thì có thể 
+										phòng chống bằng cách tích hợp hệ thống CDN. Nhưng còn L4? Tấn công trực tiếp vào lớp mạng lưới của ứng dụng làm cho server quá tải. Xử lý vấn đề này cần tác động đến lớp mạng lưới. 
+										Viettel cloudrity cung cấp sản phẩm có sử dụng tính năng lái traffic khi có tấn công vào L4. Mn tham khảo nhé.
+									</p>
+									<ul class="fh5co-social-icons">
+										<li>Share:</li>
+										<li><a href="#"><i class="icon-instagram-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
+									</ul>
+								</div> 
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="fh5co-blog animate-box">
+								<div class="title text-center">
+									<span class="posted-on">May. 9th 2021</span>
 									<h3><a href="#">TCP congestion avoidance</a></h3>
 									<span class="category">Networking</span>
 								</div>
@@ -262,7 +310,7 @@
 									</p>
 									<ul class="fh5co-social-icons">
 										<li>Share:</li>
-										<li><a href="#"><i class="icon-twitter-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-instagram-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
@@ -270,7 +318,55 @@
 								</div> 
 							</div>
 						</div>
-						
+						<div class="col-md-6">
+							<div class="fh5co-blog animate-box">
+								<div class="title text-center">
+									<span class="posted-on">Jun. 2rd 2021</span>
+									<h3><a href="#">Cloud computing for dumpmy</a></h3>
+									<span class="category">Cloud</span>
+								</div>
+								<a href="#"><img class="img-responsive" src="images/cloud.jpg" alt=""></a>
+								<div class="blog-text text-center">
+									<p>
+										Giờ đi đâu cũng hot trend cloud. Vậy cloud là cái chi chi ta? Cloud giống như cái máy tính của các bạn, nhưng mà nó to hơn. Nó sinh ra nhằm mục đích cho người khác thuê cái máy đó của các bạn và trả tiền thuê theo thời gian dùng
+										Ví dụ tôi có cái máy 32gb tôi cho bạn thuê 8gb và lấy 20k vnd/1h sử dụng. Bạn có thể dùng cái máy đó để sử dụng như 1 máy thường của bạn. Hoặc nhằm mục đích tạo ra thương mại.
+										Nhưng mà thế cái đó là gì mà gọi là trend? Thì những ông lớn trong ngành như là amazon và google họ có cái máy to gấp triệu triệu lần, và chi phí bạn bỏ ra thuê dùng sẽ rẻ hơn chi phí bạn tự mua máy => nên người ta sẽ ưu tiên mua cloud.
+										Đọc thêm cloud ở đây nhé: https://dangdh.notion.so/cloud
+									</p>
+									<ul class="fh5co-social-icons">
+										<li>Share:</li>
+										<li><a href="#"><i class="icon-instagram-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
+									</ul>
+								</div> 
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="fh5co-blog animate-box">
+								<div class="title text-center">
+									<span class="posted-on">Jun. 10th 2021</span>
+									<h3><a href="#">Containerization vs Virtualization</a></h3>
+									<span class="category">Containerization</span>
+								</div>
+								<a href="#"><img class="img-responsive" src="images/docker.jpg" alt=""></a>
+								<div class="blog-text text-center">
+									<p>
+										Haiz đi phỏng vấn đâu đâu cũng "Em có biết container và virtualize khác nhau chỗ nào." => Câu này thực sự không khó nhưng để trả lời 1 cách thuyết phục khiến cho tech lead cũng 
+										phải gật gù thì đây là câu trả lời nhá => For sure because it is the essence.
+										Đọc thêm cloud ở đây nhé: https://dangdh.notion.so/containerization
+									</p>
+									<ul class="fh5co-social-icons">
+										<li>Share:</li>
+										<li><a href="#"><i class="icon-instagram-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
+										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
+									</ul>
+								</div> 
+							</div>
+						</div>
 					</div>
 				</div>
 				
