--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 									<li><a target="_blank" href="https://www.facebook.com/dangdh16/"><i class="icon-facebook-with-circle"></i></a></li>
 									<li><a target="_blank" href="https://www.linkedin.com/in/dang-dong-hai-8738641a6/"><i class="icon-linkedin-with-circle"></i></a></li>
 									<li><a target="_blank" href="https://github.com/DHaiDang"><i class="icon-github-with-circle"></i></a></li>
+									<li><a target="_blank" href="https://www.youtube.com/channel/UCv4VErNdgdORu1qd31NksVg"><i class="icon-youtube-with-circle"></i></a></li>
 								</ul>
 							</div>
 						</div>
